@@ -15,6 +15,12 @@
       <artifactId>mysql-connector-java</artifactId>
       <version>8.0.33</version>
     </dependency>
+    <!-- SQLite JDBC 驱动 -->
+    <dependency>
+      <groupId>org.xerial</groupId>
+      <artifactId>sqlite-jdbc</artifactId>
+      <version>3.41.2.2</version>
+    </dependency>
     <!--    -->
     <dependency>
       <groupId>org.jsoup</groupId>
@@ -68,6 +74,14 @@
         <configuration>
           <source>25</source>
           <target>25</target>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.1.2</version>
+        <configuration>
+          <argLine>--enable-native-access=ALL-UNNAMED</argLine>
         </configuration>
       </plugin>
     </plugins>
